# LearnDataWithMark

./: .gitignore  README.adoc  README.md
beam-playground/: app.py  call.py
burr-playground/: app.py  app_part1.py  app_part2.py
chainlit-playground/: README.md  chat.py  chat_echo.py  chat_final.py  chat_single.py
duckdb-1.2/: structs.md
evaluate-rag/: eval.ipynb  olympics.duckdb  search.py
fast-embed/: big.py  demo.py  extract_sentences.py  fast_server.py  timer.py
fast-embed/data/: business-66288309.html  business-67121212.html  business-67153669.html  business-67156176.html  business-67213134.html  business-67217915.html  business-67327060.html  education-67236732.html  entertainment-arts-67134595.html  health-66382168.html  health-67264350.html  newsbeat-66993297.html  technology-65102150.html  technology-65110030.html  technology-65760449.html  technology-66271429.html  technology-66604123.html  technology-66661815.html  technology-66672054.html  technology-66879709.html  technology-66882414.html  technology-66940771.html  technology-66941337.html  technology-67022005.html  technology-67027282.html  technology-67118264.html  technology-67132846.html  technology-67133157.html  technology-67170014.html  technology-67172230.html  technology-67221117.html  technology-67261284.html  technology-67285315.html  uk-67225158.html  uk-67301402.html  uk-67302048.html  uk-england-beds-bucks-herts-67209484.html  uk-england-cambridgeshire-67264131.html  uk-england-coventry-warwickshire-67175089.html  uk-england-dorset-67143306.html  (+11 more)
few-shot-prompting/models/: Modelfile-question-llama2  Modelfile-question-llama2-13b  Modelfile-question-llama2-base
few-shot-prompting/notebooks/: FewShotPrompting-Tutorial.ipynb  plotly_utils.py  sentences.csv
fts-vs-vector-search/: fts_vector.ipynb
fts-vs-vector-search/data/: ep68.txt
gemma3/: app_multi.py  utils.py
gliner-playground/: annotate.py  pyproject.toml  video_utils.py
gliner-playground/data/: atlas.txt  stability.txt  tennis.txt
gpt-instruct/notebooks/: GPT-Instruct-Tutorial.ipynb  GPT-Instruct.ipynb
guidance-playground/: README.md  requirements.txt
guidance-playground/notebooks/: Guidance-Tutorial.ipynb  Guidance.ipynb  README.md
hybrid-search/: hybrid.ipynb  olympics.parquet
intro-vector-search/: pyproject.toml
intro-vector-search/notebooks/: VectorSearch-Faiss.ipynb  VectorSearch-Tutorial.ipynb  plotly_functions.py
json-gpt/: README.adoc  pyproject.toml
json-gpt/cliclick/: script-part2-simple.md  script-part2.md  script.md
json-gpt/notebooks/: SentimentAnalysis-Raw.ipynb  SentimentAnalysis.ipynb  reviews.csv  reviews_sentiment.csv
lance-multi-modal/: utils.py
lancedb-ollama-rag/: lance_rag.ipynb  utils.py
lancedb-ollama-rag/data/: sentences.csv
langroid-sandbox/: query_csv.py
langroid-sandbox/data/: world_population_data.csv
llamacpp-rag/: import.py  query.py  utils.py
llamacpp-rag/data/: 936d21b9.mp3-openai.json  GLT2595418569-openai.json
llava/: README.md  app.py  llava.py  pyproject.toml
llava-variants/: app.py  pyproject.toml
llm-own-laptop/: README.adoc  pyproject.toml
llm-own-laptop/notebooks/: LLMOwnLaptop.ipynb  LLMOwnLaptop_Backup.ipynb  SentimentAnalysis.ipynb  timer.py  utils.py
llmware-slim/: readme.md
markdown-tables/: README.md  utils.py  utils_test.py
matryoshka-embeddings/: matryoshka.ipynb  olympics.duckdb
matryoshka-embeddings/data/: questions.json
metadata/notebooks/: User-Provided-Metadata-Tutorial.ipynb  documents.json
mistral-v3/: app.py  functions.py  test_function_calling.py
mistral-v3-testing/: fn_calling.py
mistral-v3-testing/tests/: .test_sentiment.py.swp  test_sentiment.py  test_time.py  test_utils.py  test_weather.py
mlx-whisper-playground/: README.md
mlx-whisper-playground/transcripts/: 25554ea7-afeb-4140-a404-2e9e796939ab.json  25554ea7-afeb-4140-a404-2e9e796939ab.srt  25554ea7-afeb-4140-a404-2e9e796939ab.txt  3d12c5a5-d5fb-447e-890b-d772e01528e3.json  3d12c5a5-d5fb-447e-890b-d772e01528e3.txt  GLT4095802733.json  GLT4095802733.srt  GLT4095802733.txt  VMP9790110297.json  openai.srt  (+7 more)
nuextract-playground/: README.md  templates.py  utils.py
ollama-images-multiprompt/: multi-prompt.ipynb
ollama-library/: iterm_utils.py  pyproject.toml  time_cell.py
ollama-mixtral/: README.md
ollama-openai/: chat.py
ollama-own-model/: Modelfile  README.md
ollama-parallel/: app.py  app_chat.py  app_single.py  app_v2.py
openai-function-calling/: function_calling_openai.py
openai-structuredoutput/: structured_output.ipynb  videos.csv
openai-whisper-turbo/: 25554ea7-afeb-4140-a404-2e9e796939ab.mp3-large.json  GLT4095802733.mp3-large.json  GLT4095802733.mp3.json  openai.json  openai.mp3-large.json  openai.mp3.json  readme.md  sinner-tennis-podcast.mp3-large.json  sinner-tennis-podcast.mp3.json
openclip-playground/: app.py  console.py  notes.md  notes.py  pyproject.toml
phidata-agentic-analytics/: agents.py  app.py
phidata-memory/: code.ipynb
phidata-sandbox/: code.ipynb
phidata-streamlit/: agents.py  app.py  utils.py
rerankers-playground/: rerankers.ipynb  search.py  utils.py
retrieval-augmented-generation/: .env-example  README.md  pyproject.toml
rewrite-query-llm/: eval.py  search.py  utils.py
search-based-rag/: import.py  search.py
trueskill-playground/: Favourite_Players.py  explore.py  get_players.py  player.py  pyproject.toml
trueskill-playground/cliclick/: jupyter-script.md  script.md
trueskill-playground/data/: players.csv
trueskill-playground/notebooks/: Untitled.ipynb
trueskill-playground/notebooks/.ipynb_checkpoints/: TrueSkill-checkpoint.ipynb
trueskill-playground/pages/: 1_Select_Matches.py  2_Player_Rankings.py
tsne-playground/: app.py  help.py
uv-scripting/: transcribe.py  transcribe_final.py
vector-database/: chroma_sandbox.py  pyproject.toml
vector-database/notebooks/: ChromaDb-Tutorial.ipynb  ChromaDb.ipynb  VectorSearch-Faiss.ipynb  VectorSearch-Tutorial.ipynb  VectorSearch.ipynb  sentences.csv
vector-search-llm/: RAG-Tutorial.ipynb
youtube-comments/: README.md  app.py  pyproject.toml
(+22 files in other folders)
