[tool.poetry]
name = "intro-vector-search"
version = "0.1.0"
description = ""
authors = ["Mark Needham <m.h.needham@gmail.com>"]
readme = "README.md"
packages = [{include = "intro_vector_search"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.5"
jupyterlab-execute-time = "^3.0.1"
pandas = "^2.1.0"
plotly = "^5.16.1"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
