[tool.poetry]
name = "json-gpt"
version = "0.1.0"
description = ""
authors = ["Mark Needham <m.h.needham@gmail.com>"]
readme = "README.md"
packages = [{include = "json_gpt"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
openai = "^0.27.8"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
