[tool.poetry]
name = "llava-llama3"
version = "0.1.0"
description = ""
authors = ["Mark Needham <m.h.needham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.2.0"
ipython = "^8.24.0"
rich = "^13.7.1"
streamlit = "^1.34.0"
openai = "^1.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
