[tool.poetry]
name = "openclip-playground"
version = "0.1.0"
description = ""
authors = ["Mark Needham <m.h.needham@gmail.com>"]
readme = "README.md"
packages = [{include = "openclip_playground"}]

[tool.poetry.dependencies]
python = "^3.11"
llm = "^0.12"
ipython = "^8.17.2"
rich = "^13.7.0"
chromadb = "^0.4.17"
streamlit = "^1.28.2"
watchdog = "^3.0.0"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
