[tool.poetry]
name = "youtube-comments"
version = "0.1.0"
description = ""
authors = ["Mark Needham <m.h.needham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
plotly = "^5.19.0"
ollama = "^0.1.6"
pandas = "^2.2.1"
python-youtube = "^0.9.4"
streamlit = "^1.31.1"
watchdog = "^4.0.0"
openai = "^1.13.3"
ipython = "^8.22.1"
rich = "^13.7.1"
llama-cpp-python = "^0.2.55"
umap-learn = "^0.5.5"
matplotlib = "^3.8.3"
datashader = "^0.16.0"
bokeh = "^3.3.4"
holoviews = "^1.18.3"
scikit-image = "^0.22.0"
colorcet = "^3.1.0"
dask-expr = "^1.0.1"
duckdb = "^0.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
